--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,38 @@
   margin: 0;
   padding: 0;
 }
+
+#app {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: #272727;
+  font-size: 45px;
+  border: 5px solid #272727;
+  padding: 40px 80px;
+  position: relative;
+  overflow: hidden;
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #fff200;
+  height: 100%;
+  width: 100%;
+  z-index: -10;
+  transform-origin: bottom left;
+  transform: rotate(-90deg);
+  transition: transform 0.5s;
+}
+
+a:hover::before {
+  transform: rotate(0) scaleX(1.5);
+}
