--- a/src/style.css
+++ b/src/style.css
@@ -15,12 +15,14 @@
 
 a {
   text-decoration: none;
-  color: #272727;
-  font-size: 45px;
-  border: 5px solid #272727;
+  color: #351435;
+  font-size: 40px;
+  font-family: sans-serif;
+  border: 3px solid #351435;
   padding: 40px 80px;
   position: relative;
   overflow: hidden;
+  transition: all 0.5s;
 }
 
 a::before {
@@ -28,15 +30,19 @@ a::before {
   position: absolute;
   left: 0;
   top: 0;
-  background-color: #fff200;
+  background-color: #351435;
   height: 100%;
   width: 100%;
   z-index: -10;
-  transform-origin: bottom left;
-  transform: rotate(-90deg);
-  transition: transform 0.5s;
+  transform: translateX(-100%);
+  transform-origin: left;
+  transition: all 0.5s;
+}
+
+a:hover {
+  color: white;
 }
 
 a:hover::before {
-  transform: rotate(0) scaleX(1.5);
+  transform: translateX(0) scaleX(1.1);
 }
