--- a/src/style.css
+++ b/src/style.css
@@ -15,34 +15,19 @@
 
 a {
   text-decoration: none;
-  color: #351435;
+  color: #e1332d;
   font-size: 40px;
-  font-family: sans-serif;
-  border: 3px solid #351435;
+  font-family: "roboto", sans-serif;
+  font-weight: 300;
+  letter-spacing: -2px;
+  border: 3px solid #e1332d;
   padding: 40px 80px;
-  position: relative;
-  overflow: hidden;
-  transition: all 0.5s;
-}
-
-a::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-color: #351435;
-  height: 100%;
-  width: 100%;
-  z-index: -10;
-  transform: translateX(-100%);
-  transform-origin: left;
+  text-transform: uppercase;
   transition: all 0.5s;
 }
 
 a:hover {
-  color: white;
-}
-
-a:hover::before {
-  transform: translateX(0) scaleX(1.1);
+  font-weight: 900;
+  letter-spacing: 10px;
+  border: 7px solid #e1332d;
 }
