--- a/src/style.css
+++ b/src/style.css
@@ -15,19 +15,52 @@
 
 a {
   text-decoration: none;
-  color: #e1332d;
+  color: #262626;
   font-size: 40px;
   font-family: "roboto", sans-serif;
   font-weight: 300;
-  letter-spacing: -2px;
-  border: 3px solid #e1332d;
+  letter-spacing: 2px;
+  border: 3px solid #262626;
   padding: 40px 80px;
   text-transform: uppercase;
   transition: all 0.5s;
+  position: relative;
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #262626;
+  transition: 0.5s;
+  transform: rotateX(90deg);
+  z-index: -10;
+}
+
+a::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #262626;
+  transition: 0.5s;
+  transform: rotateY(90deg);
+  z-index: -10;
 }
 
 a:hover {
-  font-weight: 900;
-  letter-spacing: 10px;
-  border: 7px solid #e1332d;
+  color: white;
+}
+
+a:hover::before {
+  transform: rotateX(0);
+}
+
+a:hover::after {
+  transform: rotateY(0);
 }
