--- a/src/style.css
+++ b/src/style.css
@@ -11,43 +11,37 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #000000;
 }
 
 a {
   text-decoration: none;
-  color: #262626;
+  color: white;
   font-size: 40px;
   font-family: "roboto", sans-serif;
-  font-weight: 300;
-  letter-spacing: 2px;
-  border: 3px solid #262626;
+  border: 3px solid white;
   padding: 40px 80px;
-  text-transform: uppercase;
   transition: all 0.5s;
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
+}
+
+a:hover {
+  background-color: #ff4500;
 }
 
 a::before {
-  content: "Gigidi!";
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  position: absolute;
+  content: "";
+  background-color: white;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: #262626;
-  transition: 0.5s;
-  transform: translateY(100%);
-  z-index: 10;
-}
-a:hover {
-  color: white;
+  height: 50px;
+  transform: translateX(-100%) rotate(45deg) scaleX(1.5);
+  transition: all 0.5s;
+  position: absolute;
 }
 
 a:hover::before {
-  transform: translateY(0);
+  transform: translateX(100%) rotate(45deg) scaleX(1.5);
 }
