--- a/src/style.css
+++ b/src/style.css
@@ -11,37 +11,46 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #000000;
+  background: #ffffff;
 }
 
 a {
   text-decoration: none;
-  color: white;
+  background-color: #262626;
   font-size: 40px;
   font-family: "roboto", sans-serif;
-  border: 3px solid white;
+  border: 3px solid #262626;
   padding: 40px 80px;
   transition: all 0.5s;
   position: relative;
+  color: transparent;
   overflow: hidden;
 }
 
-a:hover {
-  background-color: #ff4500;
-}
-
-a::before {
-  content: "";
-  background-color: white;
+a::before,
+a::after {
+  content: "Hover Me";
+  position: absolute;
   top: 0;
   left: 0;
+  background-color: #fffa65;
+  color: #262626;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 50px;
-  transform: translateX(-100%) rotate(45deg) scaleX(1.5);
+  height: 100%;
   transition: all 0.5s;
-  position: absolute;
 }
 
 a:hover::before {
-  transform: translateX(100%) rotate(45deg) scaleX(1.5);
+  transform: translate(100%, -100%);
+}
+
+a::after {
+  transform: translate(-100%, 100%);
+}
+
+a:hover::after {
+  transform: translate(0, 0);
 }
