--- a/src/style.css
+++ b/src/style.css
@@ -16,41 +16,38 @@
 
 a {
   text-decoration: none;
-  background-color: #262626;
+  color: #262626;
   font-size: 40px;
   font-family: "roboto", sans-serif;
   border: 3px solid #262626;
   padding: 40px 80px;
-  transition: all 0.5s;
-  position: relative;
-  color: transparent;
+  transition: all 0.1s;
   overflow: hidden;
+  position: relative;
 }
 
-a::before,
-a::after {
+a:hover {
+  color: white;
+}
+
+a::before {
   content: "Hover Me";
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #fffa65;
-  color: #262626;
+  height: 100%;
+  width: 100%;
+  background-color: #262626;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
   transition: all 0.5s;
+  transform: scale(5);
+  opacity: 0;
 }
 
 a:hover::before {
-  transform: translate(100%, -100%);
-}
-
-a::after {
-  transform: translate(-100%, 100%);
-}
-
-a:hover::after {
-  transform: translate(0, 0);
+  transform: scale(1);
+  opacity: 1;
 }
