--- a/src/style.css
+++ b/src/style.css
@@ -19,35 +19,29 @@ a {
   color: #262626;
   font-size: 40px;
   font-family: "roboto", sans-serif;
+  background: none;
   border: 3px solid #262626;
   padding: 40px 80px;
   transition: all 0.1s;
+  background: transparent;
   overflow: hidden;
   position: relative;
-}
-
-a:hover {
-  color: white;
+  z-index: 10;
 }
 
 a::before {
-  content: "Hover Me";
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 0%;
   width: 100%;
-  background-color: #262626;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: orange;
   transition: all 0.5s;
-  transform: scale(5);
-  opacity: 0;
+  border-radius: 0 0 50% 50%;
+  z-index: -10;
 }
 
 a:hover::before {
-  transform: scale(1);
-  opacity: 1;
+  height: 200%;
 }
