--- a/src/style.css
+++ b/src/style.css
@@ -11,82 +11,65 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #272727;
+  background: white;
+  z-index: -50;
 }
 
 a {
-  width: 220px;
-  height: 80px;
-  color: #ff0;
-  background-color: transparent;
-  font-size: 26px;
+  width: 300px;
+  height: 60px;
   text-decoration: none;
+  font-family: sans-serif;
   text-transform: uppercase;
+  background-color: transparent;
   text-align: center;
-  line-height: 80px;
-  transition: all 0.5s;
+  line-height: 60px;
+  font-weight: bold;
+  letter-spacing: 2px;
   position: relative;
-  z-index: 10;
+  transition: all 0.2s;
+  color: white;
+  z-index: 0;
 
   &:hover {
-    color: #262626;
-    transition-delay: 0.4s;
+    color: #272727;
   }
 
   &::before,
   &::after {
     content: "";
     position: absolute;
-    top: 50%;
-    width: 20px;
-    height: 20px;
-    background-color: #ff0;
-    border-radius: 50%;
-    transform: translateY(-50%);
-    transition: all 0.3s;
-    opacity: 0;
+    width: 100%;
+    height: 100%;
     z-index: -10;
+    transition: all 0.2s;
   }
 
   &::before {
-    left: 0;
-    box-shadow: -100px 0 0 #ff0;
+    top: -3px;
+    left: -3px;
+    transform-origin: top;
+    mix-blend-mode: multiply;
+    background-color: #20caff;
   }
 
   &::after {
-    right: 0;
-    box-shadow: 100px 0 0 #ff0;
+    top: 3px;
+    left: 3px;
+    mix-blend-mode: multiply;
+    transform-origin: bottom;
+    background-color: #ff7675;
   }
 
   &:hover::before {
-    left: 50%;
-    box-shadow: 30px 0 0 #ff0;
-    transform: translateX(-50%) translateY(-50%);
-    opacity: 1;
+    top: -6px;
+    left: 0;
+    transform: perspective(1000px) rotateX(75deg);
   }
 
   &:hover::after {
-    right: 50%;
-    box-shadow: -30px 0 0 #ff0;
-    transform: translateX(50%) translateY(-50%);
-    opacity: 1;
-  }
-
-  span {
-    position: absolute;
-    top: 0;
+    top: 6px;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #ff0;
-    border-radius: 8px;
-    transform: scale(0);
-    transition: all 0.3s;
-    z-index: -10;
-  }
-
-  &:hover span {
-    transform: scale(1);
-    transition-delay: 0.4s;
+    transform: perspective(1000px) rotateX(-75deg);
   }
 }
