--- a/src/style.css
+++ b/src/style.css
@@ -16,60 +16,48 @@
 }
 
 a {
-  width: 300px;
-  height: 60px;
   text-decoration: none;
   font-family: sans-serif;
   text-transform: uppercase;
-  background-color: transparent;
+  color: #f6b93b;
+  font-size: 24px;
+  letter-spacing: 3px;
+  height: 80px;
+  width: 200px;
+  transition: all 0.5s;
   text-align: center;
   line-height: 60px;
-  font-weight: bold;
-  letter-spacing: 2px;
   position: relative;
-  transition: all 0.2s;
-  color: white;
-  z-index: 0;
 
-  &:hover {
-    color: #272727;
+  &::before {
+    content: "";
+    position: absolute;
+    height: 90px;
+    width: 200px;
+    top: -15px;
+    left: 0;
+    border-left: 2px solid red;
+    border-right: 2px solid #f6b93b;
+    transition: all 0.3s;
+    transition-delay: 0.3s;
   }
 
-  &::before,
   &::after {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -10;
-    transition: all 0.2s;
-  }
-
-  &::before {
-    top: -3px;
-    left: -3px;
-    transform-origin: top;
-    mix-blend-mode: multiply;
-    background-color: #20caff;
-  }
-
-  &::after {
-    top: 3px;
-    left: 3px;
-    mix-blend-mode: multiply;
-    transform-origin: bottom;
-    background-color: #ff7675;
+    height: 60px;
+    width: 230px;
+    top: 0;
+    left: -15px;
+    border-top: 2px solid red;
+    border-bottom: 2px solid #f6b93b;
+    transition: all 0.6s;
   }
 
   &:hover::before {
-    top: -6px;
-    left: 0;
-    transform: perspective(1000px) rotateX(75deg);
+    transform: rotateY(180deg);
   }
-
   &:hover::after {
-    top: 6px;
-    left: 0;
-    transform: perspective(1000px) rotateX(-75deg);
+    transform: rotateX(180deg);
   }
 }
