--- a/src/style.css
+++ b/src/style.css
@@ -15,49 +15,43 @@
   z-index: -50;
 }
 
-a {
-  text-decoration: none;
+button {
+  border: none;
+  padding: 12px 40px;
+  background-color: #c47135;
+  color: wheat;
   font-family: sans-serif;
+  font-size: 22px;
   text-transform: uppercase;
-  color: #f6b93b;
-  font-size: 24px;
-  letter-spacing: 3px;
-  height: 80px;
-  width: 200px;
-  transition: all 0.5s;
-  text-align: center;
-  line-height: 60px;
+  cursor: pointer;
   position: relative;
 
-  &::before {
-    content: "";
-    position: absolute;
-    height: 90px;
-    width: 200px;
-    top: -15px;
-    left: 0;
-    border-left: 2px solid red;
-    border-right: 2px solid #f6b93b;
-    transition: all 0.3s;
-    transition-delay: 0.3s;
-  }
-
+  &::before,
   &::after {
     content: "";
     position: absolute;
-    height: 60px;
-    width: 230px;
-    top: 0;
-    left: -15px;
-    border-top: 2px solid red;
-    border-bottom: 2px solid #f6b93b;
-    transition: all 0.6s;
+    width: 24px;
+    height: 24px;
+    transition: all 0.3s;
   }
 
-  &:hover::before {
-    transform: rotateY(180deg);
-  }
+  &:hover::before,
   &:hover::after {
-    transform: rotateX(180deg);
+    height: 100%;
+    width: 100%;
+  }
+
+  &::before {
+    top: -4px;
+    left: -4px;
+    border-top: 2px solid #c47135;
+    border-left: 2px solid #c47135;
+  }
+
+  &::after {
+    bottom: -4px;
+    right: -4px;
+    border-bottom: 2px solid #c47135;
+    border-right: 2px solid #c47135;
   }
 }
