--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 
 #app {
   height: 100vh;
+  font-family: sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,43 +16,57 @@
   z-index: -50;
 }
 
-button {
-  border: none;
-  padding: 12px 40px;
-  background-color: #c47135;
-  color: wheat;
-  font-family: sans-serif;
-  font-size: 22px;
-  text-transform: uppercase;
-  cursor: pointer;
+a {
+  text-decoration: none;
+  width: 160px;
+  height: 60px;
+  color: black;
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
   position: relative;
+  z-index: 0;
+  transition: all 0.2s;
 
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    transition: all 0.3s;
-  }
-
-  &:hover::before,
-  &:hover::after {
-    height: 100%;
-    width: 100%;
+  &:hover {
+    color: white;
   }
 
   &::before {
-    top: -4px;
-    left: -4px;
-    border-top: 2px solid #c47135;
-    border-left: 2px solid #c47135;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0;
+    transition: all 0.8s;
+    z-index: -10;
   }
 
-  &::after {
-    bottom: -4px;
-    right: -4px;
-    border-bottom: 2px solid #c47135;
-    border-right: 2px solid #c47135;
+  &:hover::before {
+    opacity: 1;
+    transform: rotate(15deg);
+  }
+
+  & > span {
+    color: transparent;
+    position: relative;
+
+    &::before {
+      content: "B";
+      position: absolute;
+      color: black;
+      transition: all 0.2s;
+    }
+  }
+
+  &:hover > span::before {
+    color: white;
+    font-size: 80px;
+    transform: translate(-65%, -40%) rotate(360deg);
   }
 }
