--- a/src/style.css
+++ b/src/style.css
@@ -18,55 +18,54 @@
 
 a {
   text-decoration: none;
-  width: 160px;
-  height: 60px;
-  color: black;
-  border: 2px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 24px;
+  padding: 15px 30px;
+  color: #00aeff;
+  font-size: 18px;
+  letter-spacing: 3px;
+  border: 2px solid lightblue;
+  text-transform: uppercase;
   position: relative;
+  transition: all 0.5s;
+  transition-delay: 0.2s;
+  overflow: hidden;
   z-index: 0;
-  transition: all 0.2s;
 
   &:hover {
     color: white;
   }
 
+  &:hover > .wave {
+    top: 0;
+  }
+}
+
+.wave {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: calc(100% + 22px);
+  background-color: #00aeff;
+  transition: all 1s;
+  z-index: -10;
+
   &::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: -22px;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: black;
-    opacity: 0;
-    transition: all 0.8s;
-    z-index: -10;
+    height: 22px;
+    background: url(public/wave.png);
+    animation: wavy 0.5s linear infinite;
   }
+}
 
-  &:hover::before {
-    opacity: 1;
-    transform: rotate(15deg);
+@keyframes wavy {
+  0% {
+    background-position-x: 0;
   }
-
-  & > span {
-    color: transparent;
-    position: relative;
-
-    &::before {
-      content: "B";
-      position: absolute;
-      color: black;
-      transition: all 0.2s;
-    }
-  }
-
-  &:hover > span::before {
-    color: white;
-    font-size: 80px;
-    transform: translate(-65%, -40%) rotate(360deg);
+  100% {
+    background-position-x: 118px;
   }
 }
