--- a/src/style.css
+++ b/src/style.css
@@ -18,54 +18,49 @@
 
 a {
   text-decoration: none;
-  padding: 15px 30px;
-  color: #00aeff;
-  font-size: 18px;
-  letter-spacing: 3px;
-  border: 2px solid lightblue;
-  text-transform: uppercase;
+  width: 160px;
+  height: 60px;
+  color: #663399;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: capitalize;
+  font-size: 25px;
   position: relative;
-  transition: all 0.5s;
-  transition-delay: 0.2s;
+  transition: all 0.2s;
   overflow: hidden;
   z-index: 0;
 
+  span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    border: 2px solid #663399;
+    z-index: -10;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 8%;
+      height: 500%;
+      background-color: white;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(-60deg);
+      transition: all 0.2s;
+    }
+  }
+
   &:hover {
     color: white;
-  }
 
-  &:hover > .wave {
-    top: 0;
-  }
-}
-
-.wave {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: calc(100% + 22px);
-  background-color: #00aeff;
-  transition: all 1s;
-  z-index: -10;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: -22px;
-    left: 0;
-    width: 100%;
-    height: 22px;
-    background: url(public/wave.png);
-    animation: wavy 0.5s linear infinite;
-  }
-}
-
-@keyframes wavy {
-  0% {
-    background-position-x: 0;
-  }
-  100% {
-    background-position-x: 118px;
+    span::before {
+      width: 100%;
+      background-color: #663399;
+      transform: translate(-50%, -50%) rotate(60deg);
+    }
   }
 }
