--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,59 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+}
+
+.container {
+  width: 500px;
+  height: 500px;
+  overflow: hidden;
+  position: relative;
+
+  &:hover {
+    & > .caption {
+      opacity: 1;
+      background: #00000070;
+    }
+
+    & > img {
+      transform: scale(1.3) rotate(20deg);
+    }
+  }
+}
+
+img {
+  width: 100%;
+  transition: all 0.5s;
+}
+
+.caption {
+  position: absolute;
+  inset: 0;
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  gap: 1rem;
+  align-items: center;
+  color: white;
+  opacity: 0;
+  transition: all 0.5s;
+  background: #00000000;
+
+  & > h1 {
+    text-transform: uppercase;
+    margin: 0;
+  }
+
+  & > p {
+    font-size: 18px;
+    text-transform: capitalize;
+  }
+}
