--- a/src/style.css
+++ b/src/style.css
@@ -22,12 +22,11 @@ body {
 
   &:hover {
     & > .caption {
-      opacity: 1;
-      background: #00000070;
+      transform: translateY(0%);
     }
 
     & > img {
-      transform: scale(1.3) rotate(20deg);
+      transform: scale(1.1) translateY(-25%);
     }
   }
 }
@@ -39,17 +38,19 @@ img {
 
 .caption {
   position: absolute;
-  inset: 0;
-  padding: 2rem 0;
+  bottom: 0;
+  left: 0;
+  height: 25%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: center;
   gap: 1rem;
   align-items: center;
   color: white;
-  opacity: 0;
   transition: all 0.5s;
-  background: #00000000;
+  background: #000000;
+  transform: translateY(100%);
 
   & > h1 {
     text-transform: uppercase;
