--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,53 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+}
+
+.card {
+  position: relative;
+  width: 300px;
+  height: 260px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px #00000050;
+  padding: 20px 40px;
+  cursor: pointer;
+  transition: all 0.3s;
+
+  &:hover {
+    height: 420px;
+
+    & .content {
+      opacity: 1;
+      transform: translateY(-200px);
+    }
+  }
+}
+
+.imgbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  transform: translateY(-60px);
+}
+
+img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.content {
+  padding: 10px 20px;
+  text-align: center;
+  color: #111111;
+  transition: all 0.3s;
+  transform: translateY(-300px);
+  opacity: 0;
+}
