--- a/src/style.css
+++ b/src/style.css
@@ -12,46 +12,83 @@ body {
   justify-content: center;
   align-items: center;
   font-family: sans-serif;
+  background-color: #336699;
 }
 
 .card {
   position: relative;
   width: 300px;
-  height: 260px;
-  border-radius: 10px;
-  box-shadow: 0px 5px 20px #00000050;
-  padding: 20px 40px;
-  cursor: pointer;
-  transition: all 0.3s;
+  height: 400px;
+  background-color: white;
+  transition: all 0.5s;
 
   &:hover {
-    height: 420px;
+    box-shadow: 0 30px 50px #00000020;
 
-    & .content {
-      opacity: 1;
-      transform: translateY(-200px);
+    .face2 {
+      height: 80px;
+      width: 80px;
+      border-radius: 50%;
+      top: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: transparent;
+      border: 2px solid #013d4a;
+
+      h2 {
+        color: #013d4a;
+        font-size: 32px;
+      }
     }
   }
 }
 
-.imgbox {
-  position: relative;
+.face {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
-  transform: translateY(-60px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-img {
-  width: 100%;
-  border-radius: 10px;
-}
-
-.content {
-  padding: 10px 20px;
+.face1 {
+  padding: 20px;
   text-align: center;
-  color: #111111;
-  transition: all 0.3s;
-  transform: translateY(-300px);
-  opacity: 0;
+  background-color: white;
+  color: #013d4a;
+
+  & h2 {
+    margin-top: 80px;
+  }
+
+  & a {
+    margin-top: 20px;
+    display: inline-block;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: #013d4a;
+    border: 2px solid #013d4a;
+    text-transform: capitalize;
+    font-weight: bold;
+    transition: all 0.3s;
+
+    &:hover {
+      background-color: #013d4a;
+      color: white;
+    }
+  }
+}
+
+.face2 {
+  background-color: #013d4a;
+  transition: all 0.5s;
+
+  & h2 {
+    font-size: 120px;
+    color: white;
+    transition: all 0.5s;
+  }
 }
