--- a/src/style.css
+++ b/src/style.css
@@ -12,83 +12,185 @@ body {
   justify-content: center;
   align-items: center;
   font-family: sans-serif;
-  background-color: #336699;
+  background-color: #fdff7d70;
+}
+
+.container {
+  position: relative;
 }
 
 .card {
   position: relative;
-  width: 300px;
-  height: 400px;
-  background-color: white;
-  transition: all 0.5s;
+  width: 320px;
+  height: 450px;
+  background: #30302a;
+  border-radius: 20px;
+  overflow: hidden;
 
   &:hover {
-    box-shadow: 0 30px 50px #00000020;
-
-    .face2 {
-      height: 80px;
-      width: 80px;
-      border-radius: 50%;
-      top: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: transparent;
-      border: 2px solid #013d4a;
-
-      h2 {
-        color: #013d4a;
-        font-size: 32px;
-      }
+    .imgbox {
+      top: 0;
+      transform: translateY(0) scale(85%);
     }
+
+    .size {
+      opacity: 1;
+      transition-delay: 0.5s;
+    }
+
+    .color {
+      opacity: 1;
+      transition-delay: 0.6s;
+    }
+
+    .contentbox {
+      height: 195px;
+      padding-top: 10px;
+      background-color: #eecf2060;
+      clip-path: circle(500px at 50% 50%);
+    }
+
+    a {
+      opacity: 1;
+      transform: translateY(0px);
+      transition-delay: 0.7s;
+    }
+
+    &::before {
+      clip-path: circle(300px at 60% -10%);
+    }
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #eecf20;
+    clip-path: circle(150px at 80% 20%);
+    transition: all 0.5s ease-in-out;
+  }
+
+  &::after {
+    content: attr(data-brand);
+    position: absolute;
+    top: 40%;
+    left: -20%;
+    font-size: 12em;
+    color: #ffffff20;
+    font-style: italic;
+    font-weight: 800;
+    z-index: 1;
   }
 }
 
-.face {
+.imgbox {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
+  height: 220px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.5s;
+  z-index: 10;
+
+  img {
+    width: 270px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.contentbox {
+  position: absolute;
+  bottom: -20px;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  transition: all 1s;
+  z-index: 10;
+  background: transparent;
+  clip-path: circle(10px at 50% 50%);
+
+  h2 {
+    position: relative;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: #ffffff;
+  }
+
+  a {
+    display: inline-block;
+    padding: 10px 30px;
+    margin-top: 10px;
+    background: #ffffff;
+    border-radius: 4px;
+    text-decoration: none;
+    font-weight: 600;
+    color: #111;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.5s;
+  }
+}
+
+.size,
+.color {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 8px 20px;
+  opacity: 0;
+  transition: 0.5s;
+
+  h3 {
+    color: #ffffff;
+    font-weight: 300;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-right: 10px;
+  }
 }
 
-.face1 {
-  padding: 20px;
-  text-align: center;
-  background-color: white;
-  color: #013d4a;
-
-  & h2 {
-    margin-top: 80px;
-  }
-
-  & a {
-    margin-top: 20px;
-    display: inline-block;
-    padding: 5px 10px;
-    text-decoration: none;
-    color: #013d4a;
-    border: 2px solid #013d4a;
-    text-transform: capitalize;
-    font-weight: bold;
-    transition: all 0.3s;
+.size {
+  span {
+    width: 26px;
+    height: 26px;
+    line-height: 24px;
+    font-size: 14px;
+    color: #111111;
+    background-color: #ffffff;
+    border-radius: 4px;
+    margin: 0 5px;
+    transition: 0.3s;
+    cursor: pointer;
 
     &:hover {
-      background-color: #013d4a;
-      color: white;
+      color: #111;
+      background: #ffed86;
     }
   }
 }
 
-.face2 {
-  background-color: #013d4a;
-  transition: all 0.5s;
+.color {
+  span {
+    width: 20px;
+    height: 20px;
+    background-color: #663399;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
 
-  & h2 {
-    font-size: 120px;
-    color: white;
-    transition: all 0.5s;
+    &:nth-child(2) {
+      background-color: #ffed86;
+    }
+
+    &:nth-child(3) {
+      background-color: #e91e63;
+    }
   }
 }
