--- a/src/style.css
+++ b/src/style.css
@@ -4,4 +4,56 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: #3b3b3b;
+}
+
+body {
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+
+  &:hover li {
+    transform: rotate(45deg) translateY(-200px);
+    opacity: 0;
+    filter: blur(20px);
+  }
+}
+
+li {
+  color: white;
+  font-size: 100px;
+  font-weight: bold;
+  letter-spacing: 20px;
+  background: transparent;
+  transition: all 1.8s;
+
+  &:nth-child(1) {
+    transition-delay: 0s;
+  }
+
+  &:nth-child(2) {
+    transition-delay: 0.3s;
+  }
+
+  &:nth-child(3) {
+    transition-delay: 0.6s;
+  }
+
+  &:nth-child(4) {
+    transition-delay: 0.9s;
+  }
+
+  &:nth-child(5) {
+    transition-delay: 1.2s;
+  }
+
+  &:nth-child(6) {
+    transition-delay: 1.5s;
+  }
 }
