--- a/src/style.css
+++ b/src/style.css
@@ -14,46 +14,24 @@ body {
   align-items: center;
 }
 
-ul {
-  display: flex;
-  list-style: none;
+h1 {
+  font-size: 140px;
+  color: #86bdf520;
+  position: relative;
+  cursor: pointer;
 
-  &:hover li {
-    transform: rotate(45deg) translateY(-200px);
-    opacity: 0;
-    filter: blur(20px);
-  }
-}
-
-li {
-  color: white;
-  font-size: 100px;
-  font-weight: bold;
-  letter-spacing: 20px;
-  background: transparent;
-  transition: all 1.8s;
-
-  &:nth-child(1) {
-    transition-delay: 0s;
+  &:hover::before {
+    width: 100%;
   }
 
-  &:nth-child(2) {
-    transition-delay: 0.3s;
-  }
-
-  &:nth-child(3) {
-    transition-delay: 0.6s;
-  }
-
-  &:nth-child(4) {
-    transition-delay: 0.9s;
-  }
-
-  &:nth-child(5) {
-    transition-delay: 1.2s;
-  }
-
-  &:nth-child(6) {
-    transition-delay: 1.5s;
+  &::before {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #6633dd;
+    width: 0%;
+    overflow: hidden;
+    transition: all 0.8s;
   }
 }
