--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: #3b3b3b;
 }
 
 body {
@@ -14,24 +13,44 @@ body {
   align-items: center;
 }
 
-h1 {
-  font-size: 140px;
-  color: #86bdf520;
+section {
   position: relative;
-  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 450px;
+  height: 800px;
+  overflow: hidden;
+}
 
-  &:hover::before {
-    width: 100%;
-  }
+img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  filter: blur(10px);
+  transition: all 2s;
+}
 
-  &::before {
-    content: attr(data-text);
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #6633dd;
-    width: 0%;
-    overflow: hidden;
-    transition: all 0.8s;
+h2 {
+  position: relative;
+  font-family: sans-serif;
+  color: #ffffff;
+  font-size: 4em;
+  text-transform: uppercase;
+  text-shadow: 0 5px 10px #000000;
+  font-weight: 800;
+  transition: all 2s;
+  z-index: 10;
+
+  &:hover {
+    filter: blur(5px);
+    transform: scale(1.2);
+    cursor: pointer;
+
+    & + img {
+      filter: blur(0px);
+    }
   }
 }
