--- a/src/style.css
+++ b/src/style.css
@@ -8,49 +8,66 @@
 
 body {
   height: 100dvh;
+  background: url(wondering.jpg) no-repeat center;
+  backdrop-filter: blur(5px);
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-section {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 450px;
-  height: 800px;
-  overflow: hidden;
-}
-
-img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  filter: blur(10px);
-  transition: all 2s;
 }
 
 h2 {
   position: relative;
-  font-family: sans-serif;
+  display: flex;
+  gap: 1rem;
   color: #ffffff;
   font-size: 4em;
+  cursor: pointer;
   text-transform: uppercase;
-  text-shadow: 0 5px 10px #000000;
-  font-weight: 800;
-  transition: all 2s;
-  z-index: 10;
+}
+
+h2 span {
+  font-family: sans-serif;
+  position: relative;
+  filter: blur(5px);
+  transition: all 0.6s;
 
   &:hover {
-    filter: blur(5px);
-    transform: scale(1.2);
-    cursor: pointer;
+    filter: blur(0);
 
-    & + img {
-      filter: blur(0px);
+    em::before,
+    em::after {
+      opacity: 1;
+    }
+  }
+
+  em {
+    font-style: normal;
+    text-align: center;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 2px;
+      height: 8px;
+      background-color: #ffffff;
+      top: 0;
+      left: -2px;
+      box-shadow: 0 68px #ffffff, 48px 68px #ffffff, 48px 0 #ffffff;
+      opacity: 0;
+      transition: all 0.4s;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 8px;
+      height: 2px;
+      background-color: #ffffff;
+      top: 0;
+      left: -2px;
+      box-shadow: 0 74px #ffffff, 40px 74px #ffffff, 40px 0 #ffffff;
+      opacity: 0;
+      transition: all 0.4s;
     }
   }
 }
