--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,32 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #26de81;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  text-align: center;
+  font-size: 90px;
+  color: #ffffff;
+  line-height: 90px;
+  letter-spacing: 15px;
+  text-shadow: 0 20px 5px #00000010;
+
+  animation: jiggle 3s linear infinite alternate;
+}
+
+@keyframes jiggle {
+  from {
+    transform: rotate(5deg);
+  }
+  to {
+    transform: rotate(-5deg);
+  }
+}
