--- a/src/style.css
+++ b/src/style.css
@@ -13,24 +13,25 @@ body {
   justify-content: center;
   background-color: #26de81;
   font-family: Arial, Helvetica, sans-serif;
+  perspective: 100px;
 }
 
-h1 {
-  text-align: center;
-  font-size: 90px;
-  color: #ffffff;
-  line-height: 90px;
-  letter-spacing: 15px;
-  text-shadow: 0 20px 5px #00000010;
-
-  animation: jiggle 3s linear infinite alternate;
+.loading {
+  width: 100px;
+  height: 100px;
+  background: #000;
+  border-radius: 1rem;
+  animation: loading 2s linear infinite;
 }
 
-@keyframes jiggle {
-  from {
-    transform: rotate(5deg);
+@keyframes loading {
+  0% {
+    transform: rotateX(0deg) rotateY(0deg);
   }
-  to {
-    transform: rotate(-5deg);
+  50% {
+    transform: rotateX(0deg) rotateY(180deg);
+  }
+  100% {
+    transform: rotateX(180deg) rotateY(180deg);
   }
 }
