--- a/src/style.css
+++ b/src/style.css
@@ -16,22 +16,33 @@ body {
   perspective: 100px;
 }
 
-.loading {
-  width: 100px;
-  height: 100px;
-  background: #000;
-  border-radius: 1rem;
-  animation: loading 2s linear infinite;
+.background {
+  height: 100%;
+  width: 100%;
+  background: url(bg.jpg);
+  background-position: bottom left;
+  animation: driving 30s linear infinite;
 }
 
-@keyframes loading {
-  0% {
-    transform: rotateX(0deg) rotateY(0deg);
+.car {
+  position: absolute;
+  left: 300px;
+  bottom: -50px;
+  width: 200px;
+}
+
+.motorbike {
+  position: absolute;
+  left: 700px;
+  bottom: 55px;
+  width: 150px;
+}
+
+@keyframes driving {
+  from {
+    background-position: bottom left;
   }
-  50% {
-    transform: rotateX(0deg) rotateY(180deg);
-  }
-  100% {
-    transform: rotateX(180deg) rotateY(180deg);
+  to {
+    background-position: bottom right;
   }
 }
