--- a/src/style.css
+++ b/src/style.css
@@ -11,33 +11,58 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #26de81;
+  background-color: #272727;
   font-family: Arial, Helvetica, sans-serif;
   perspective: 100px;
 }
 
-h1 {
-  color: #ffffff;
-  font-size: 50px;
+ul {
+  display: flex;
+  list-style: none;
 }
 
-span {
-  &::before {
-    content: "cruelty";
-    text-transform: uppercase;
-    color: #1b1464;
-    animation: word-switch 5s infinite;
+li {
+  color: #484848;
+  font-size: 80px;
+  letter-spacing: 20px;
+  animation: lighting 1.4s linear infinite;
+
+  &:nth-child(1) {
+    animation-delay: 0s;
+  }
+
+  &:nth-child(2) {
+    animation-delay: 0.1s;
+  }
+
+  &:nth-child(3) {
+    animation-delay: 0.2s;
+  }
+
+  &:nth-child(4) {
+    animation-delay: 0.3s;
+  }
+
+  &:nth-child(5) {
+    animation-delay: 0.4s;
+  }
+
+  &:nth-child(6) {
+    animation-delay: 0.5s;
   }
 }
 
-@keyframes word-switch {
+@keyframes lighting {
   0% {
-    content: "cruelty";
+    color: #484848;
+    text-shadow: none;
   }
-  50% {
-    content: "beauty";
+  90% {
+    color: #484848;
+    text-shadow: none;
   }
   100% {
-    content: "voice";
+    color: #fff900;
+    text-shadow: 0 0 8px #fff900, 0 0 50px #ff6c00;
   }
 }
