--- a/src/style.css
+++ b/src/style.css
@@ -22,33 +22,57 @@ ul {
 }
 
 li {
-  color: #484848;
   font-size: 80px;
   letter-spacing: 20px;
-  animation: lighting 1.4s linear infinite;
+  animation: loading 3s linear infinite alternate;
 
   &:nth-child(1) {
     animation-delay: 0s;
   }
 
   &:nth-child(2) {
-    animation-delay: 0.1s;
-  }
-
-  &:nth-child(3) {
     animation-delay: 0.2s;
   }
 
-  &:nth-child(4) {
-    animation-delay: 0.3s;
-  }
-
-  &:nth-child(5) {
+  &:nth-child(3) {
     animation-delay: 0.4s;
   }
 
+  &:nth-child(4) {
+    animation-delay: 0.6s;
+  }
+
+  &:nth-child(5) {
+    animation-delay: 0.8s;
+  }
+
   &:nth-child(6) {
-    animation-delay: 0.5s;
+    animation-delay: 1s;
+  }
+}
+
+@keyframes loading {
+  0% {
+    color: red;
+    opacity: 0;
+    letter-spacing: 20px;
+    transform: translateX(-50px);
+  }
+
+  10% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 1;
+    letter-spacing: -20px;
+  }
+
+  100% {
+    color: blue;
+    opacity: 0;
+    letter-spacing: 20px;
+    transform: translateX(50px);
   }
 }
 
