--- a/src/style.css
+++ b/src/style.css
@@ -11,36 +11,104 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #272727;
+  background-color: #111111;
   font-family: Arial, Helvetica, sans-serif;
   perspective: 100px;
 }
 
-.loading {
-  width: 300px;
-  height: 3px;
-  background-color: #ffffff;
-  animation: line 2s alternate infinite;
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  background-color: transparent;
 }
 
-@keyframes line {
-  0% {
-    transform: scaleX(0);
-    transform-origin: left;
+.glass {
+  position: relative;
+
+  &:first-child .liquid {
+    background-color: #e0bd1f;
+    animation-delay: 0s;
+
+    &::before {
+      background-color: #bd9d10;
+    }
   }
 
-  45% {
-    transform: scaleX(1);
-    transform-origin: left;
+  &:last-child .liquid:last-child {
+    background-color: #41c1fb;
+    animation-delay: 2.5s;
+
+    &::before {
+      background-color: #19aff5;
+    }
+  }
+}
+
+.inner {
+  position: relative;
+  width: 200px;
+  height: 400px;
+  background-color: #ffffff10;
+  border-radius: 40px;
+  border: 8px solid transparent;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 175px;
+    height: 30px;
+    border: 10px solid #444444;
+    border-radius: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -15px;
+    box-shadow: 0 10px 0 #111111;
   }
 
-  50% {
-    transform: scaleX(1);
-    transform-origin: right;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 30px;
+    width: 50px;
+    height: 300px;
+    border-radius: 12px;
+    background-color: #ffffff10;
   }
+}
 
+.liquid {
+  position: absolute;
+  top: 50px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  animation: animate-liquid 5s linear infinite;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    border-radius: 50%;
+    top: -10px;
+  }
+}
+
+@keyframes animate-liquid {
+  0%,
+  20% {
+    top: 50px;
+  }
+  50%,
+  70% {
+    top: 320px;
+  }
   100% {
-    transform: scaleX(0);
-    transform-origin: right;
+    top: 50px;
   }
 }
