--- a/src/style.css
+++ b/src/style.css
@@ -20,95 +20,44 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 40px;
-  background-color: transparent;
 }
 
-.glass {
+.loader {
   position: relative;
-
-  &:first-child .liquid {
-    background-color: #e0bd1f;
-    animation-delay: 0s;
-
-    &::before {
-      background-color: #bd9d10;
-    }
-  }
-
-  &:last-child .liquid:last-child {
-    background-color: #41c1fb;
-    animation-delay: 2.5s;
-
-    &::before {
-      background-color: #19aff5;
-    }
-  }
+  height: 120px;
+  width: 120px;
 }
 
-.inner {
-  position: relative;
-  width: 200px;
-  height: 400px;
-  background-color: #ffffff10;
-  border-radius: 40px;
-  border: 8px solid transparent;
-
-  &::before {
-    content: "";
-    position: absolute;
-    width: 175px;
-    height: 30px;
-    border: 10px solid #444444;
-    border-radius: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-    top: -15px;
-    box-shadow: 0 10px 0 #111111;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 50px;
-    left: 30px;
-    width: 50px;
-    height: 300px;
-    border-radius: 12px;
-    background-color: #ffffff10;
-  }
-}
-
-.liquid {
+span {
   position: absolute;
-  top: 50px;
-  left: 5px;
-  right: 5px;
-  bottom: 5px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  animation: animate-liquid 5s linear infinite;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: rotate(calc(18deg * var(--i)));
 
   &::before {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 20px;
+    top: 0;
+    left: 0;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
-    top: -10px;
+    background-color: #00c3ff;
+    box-shadow: 0 0 10px #00c3ff, 0 0 20px #00c3ff, 0 0 40px #00c3ff,
+      0 0 80px #00c3ff, 0 0 100px #00c3ff;
+    animation: animate 2s linear infinite alternate;
+    animation-delay: calc(0.6s * var(--i));
   }
 }
 
-@keyframes animate-liquid {
-  0%,
-  20% {
-    top: 50px;
+@keyframes animate {
+  0% {
+    transform: scale(1);
   }
-  50%,
-  70% {
-    top: 320px;
-  }
+  80%,
   100% {
-    top: 50px;
+    transform: scale(0);
   }
 }
