--- a/src/style.css
+++ b/src/style.css
@@ -11,53 +11,84 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #111111;
+  background-color: #00152b;
   font-family: Arial, Helvetica, sans-serif;
-  perspective: 100px;
+  overflow: hidden;
 }
 
-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.loader {
+.box {
   position: relative;
-  height: 120px;
-  width: 120px;
+  width: 600px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 0;
 }
 
-span {
+h2 {
+  color: #fff;
+  font-size: 3rem;
+  font-weight: 100;
+  letter-spacing: 4px;
+  text-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
+    0 0 80px #00b3ff, 0 0 120px #00b3ff;
+}
+
+.lightbar {
   position: absolute;
-  top: 0;
+  top: 50%;
+  left: 0;
+  width: 6px;
+  height: 60%;
+  transform: translateY(-50%);
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
+    0 0 80px #00b3ff, 0 0 120px #00b3ff;
+  animation: light-move 5s linear infinite;
+  z-index: 10;
+}
+
+.toplayer {
+  position: absolute;
+  top: -50;
   left: 0;
   width: 100%;
-  height: 100%;
-  transform: rotate(calc(18deg * var(--i)));
+  height: 300px;
+  background: #00152b;
+  animation: reveal 10s linear infinite;
+  z-index: 5;
+}
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: #00c3ff;
-    box-shadow: 0 0 10px #00c3ff, 0 0 20px #00c3ff, 0 0 40px #00c3ff,
-      0 0 80px #00c3ff, 0 0 100px #00c3ff;
-    animation: animate 2s linear infinite alternate;
-    animation-delay: calc(0.6s * var(--i));
+@keyframes light-move {
+  0% {
+    transform: scaleY(0) translateY(-50%) translateX(0);
+  }
+  10% {
+    transform: scaleY(1) translateY(-50%) translateX(0);
+  }
+  90% {
+    transform: scaleY(1) translateY(-50%) translateX(calc(600px - 6px));
+  }
+  100% {
+    transform: scaleY(0) translateY(-50%) translateX(calc(600px - 6px));
   }
 }
 
-@keyframes animate {
-  0% {
-    transform: scale(1);
+@keyframes reveal {
+  5% {
+    transform: translateX(0);
   }
-  80%,
-  100% {
-    transform: scale(0);
+  45%,
+  50% {
+    transform: translateX(100%);
+  }
+  50.0001%,
+  55% {
+    transform: translateX(-100%);
+  }
+  95% {
+    transform: translateX(0);
   }
 }
