--- a/src/style.css
+++ b/src/style.css
@@ -4,4 +4,31 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100dvh;
+  background-color: #222222;
+}
+
+h2 {
+  position: relative;
+  font-size: 3em;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  font-weight: 500;
+
+  &:hover span {
+    color: #00ff2a;
+    text-shadow: 0 0 5px #00ff00, 0 0 15px #00ff00, 0 0 30px #00ff00;
+  }
+
+  span {
+    color: #555555;
+    transition: all 0.25s;
+  }
 }
